--- a/src/main/webapp/login/reset_password.xhtml
+++ b/src/main/webapp/login/reset_password.xhtml
@@ -10,15 +10,17 @@
 		<ui:define name="content">
 			<div id="reset-password">
 				<h:form id="hhcib-form">
-					<span style="display: block;">Beställ nytt lösenord</span>
+					<span class="heading" style="display: block;">Beställ nytt lösenord</span>
 					<h:inputText id="password-input"
 						value="#{resetPasswordFacade.email}" p:placeholder="E-post"
 						p:class="rounded" p:size="30">
 						<f:ajax event="keyup" render="valid-email-info"
 							listener="#{resetPasswordFacade.emailChanged}" />
 					</h:inputText>
-					<h:commandButton value="Nytt lösenord" p:class="button"
-						action="#{resetPasswordFacade.resetPassword()}" />
+					<span style="display: block;"> <h:commandButton
+							value="Nytt lösenord" p:class="button"
+							action="#{resetPasswordFacade.resetPassword()}" />
+					</span>
 					<br />
 
 					<h:outputText id="valid-email-info"
