--- a/src/main/webapp/login/signup.xhtml
+++ b/src/main/webapp/login/signup.xhtml
@@ -9,7 +9,7 @@
 	<ui:composition template="/hhcib_template.xhtml">
 
 		<ui:define name="content">
-			<span style="display: block;">Skapa nytt konto</span>
+			<span class="heading" style="display: block;">Skapa nytt konto</span>
 			<div id="signup">
 				<h:form id="hhcib-form">
 
