--- a/src/main/webapp/subject/show_subjects_in_category.xhtml
+++ b/src/main/webapp/subject/show_subjects_in_category.xhtml
@@ -30,7 +30,7 @@
 		value="#{categoryFacade.getSubjectsFor(category)}">
 
 		<div id="subject-description">
-			<span id="subject-heading">#{subject.heading}</span>
+			<span class="heading">#{subject.heading}</span>
 			<div id="rating">
 				<pf:rating totalStars="7" step="1" value="#{subject.rating}"
 					disabled="true">
