--- a/src/main/webapp/subject/show_subject.xhtml
+++ b/src/main/webapp/subject/show_subject.xhtml
@@ -38,7 +38,7 @@
 						value="#{loggedInUserFacade.isUserLoggedIn()}" />
 
 					<div id="subject-description">
-						<span id="subject-heading">#{showSubjectFacade.subject.heading} </span>
+						<span class="heading">#{showSubjectFacade.subject.heading} </span>
 						<span id="createdBy" style="font-style: italic;">(Skapad av
 							#{showSubjectFacade.subject.createdBy})</span>
 						<div id="rating">
