Added styling of login page

--- a/src/main/webapp/login/login.xhtml
+++ b/src/main/webapp/login/login.xhtml
@@ -8,7 +8,7 @@
 
 		<ui:define name="content">
 			<div id="login-form">
-				<span id="login-info-text">Ange ditt användarnamn och
+				<span class="heading"  id="login-info-text">Ange ditt användarnamn och
 					lösenord för att logga in.</span>
 				<h:form id="hhcib-form">
 					<span id="username-input" style="display: block;"> <h:inputText
