Updated my_pages so subjectes created by logged in user is shown

--- a/src/main/webapp/search/search_result_template.xhtml
+++ b/src/main/webapp/search/search_result_template.xhtml
@@ -33,8 +33,8 @@
 			<f:facet name="header">Kategori</f:facet>
     		#{subject.category}
     	</h:column>
-		<h:column rendered="#{searchFacade.searchResult.size() gt 0}">
-			<f:facet name="header">Omdöme</f:facet>
+		<h:column rendered="#{display}">
+			<f:facet name="header">Rank</f:facet>
 			<pf:rating totalStars="7" step="1" disabled="true" value="#{subject.rating}"/>
 		</h:column>
 	</h:dataTable>
