--- a/src/main/webapp/secured/my_pages.xhtml
+++ b/src/main/webapp/secured/my_pages.xhtml
@@ -12,7 +12,7 @@
 				<span id="welcome-user" class="heading">Välkommen
 					#{loggedInUserFacade.loggedInUser.userName}!</span>
 				<h:commandButton p:id="logout-button" value="Logga ut"
-					p:class="button" action="#{loginFacade.logout}" />
+					p:class="button" action="#{loginFacade.logout}" p:data-test="aTestValue"/>
 
 				<p>Här kan du byta lösenord, hantera dina inlägg samt uppdatera
 					din E-postadress.</p>
