Added integration tests for updating passwords

--- a/src/main/webapp/secured/my_pages.xhtml
+++ b/src/main/webapp/secured/my_pages.xhtml
@@ -11,10 +11,10 @@
 			<h:form id="hhcib-form">
 				<span id="welcome-user" class="heading">Välkommen
 					#{loggedInUserFacade.loggedInUser.userName}!</span>
-				<h:commandButton p:id="logout-button" value="Logga ut"
+				<h:commandButton id="logout-button" value="Logga ut"
 					p:class="button" action="#{loginFacade.logout}" p:data-test="aTestValue"/>
 
-				<p>Här kan du <a href="update_password.xhtml">byta lösenord</a>, se dina inlägg samt uppdatera
+				<p>Här kan du <a href="update_password.xhtml" data-change-password-link="change-password">byta lösenord</a>, se dina inlägg samt uppdatera
 					din E-postadress.</p>
 				<ui:fragment rendered="#{not empty loggedInUserFacade.loggedInUser}">
 					<ui:param name="subjects"
