--- a/src/main/webapp/secured/update_password.xhtml
+++ b/src/main/webapp/secured/update_password.xhtml
@@ -2,7 +2,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
+	xmlns:p="http://java.sun.com/jsf/passthrough"
 	xmlns:pf="http://jsf.playerfinder.net/components">
 
 <h:body>
@@ -15,17 +15,17 @@
 				<h:inputSecret id="password"
 					value="#{updatePasswordFacade.password}"
 					p:placeholder="Lösenord (min 4 tecken)" style="display: block;"
-					p:autocomplete="off" p:class="rounded" p:size="30" maxlenght="50">
+					p:autocomplete="off" p:class="rounded" p:size="30" maxlenght="50" p:data-update-password="password">
 				</h:inputSecret>
-				<h:inputSecret id="repeatedPassword"
+				<h:inputSecret id="repeated-password"
 					value="#{updatePasswordFacade.repeatedPassword}"
 					p:placeholder="Lösenord (repetera)" style="display: block;"
-					p:autocomplete="off" p:class="rounded" p:size="30">
+					p:autocomplete="off" p:class="rounded" p:size="30" p:data-repeat-update-password="repeated-password">
 				</h:inputSecret>
 				<h:commandButton value="Byt lösenord" p:class="button"
-					action="#{updatePasswordFacade.updatePassword(user)}" />
-				<h:messages errorStyle="color:red;" />
+					action="#{updatePasswordFacade.updatePassword(user)}" id="update-password"/>
 			</h:form>
+			<h:messages errorStyle="color:red;" id="update-password-message" />
 		</ui:define>
 	</ui:composition>
 </h:body>
