Fixed so all javascript is included in integration tests

--- a/src/main/webapp/hhcib_template.xhtml
+++ b/src/main/webapp/hhcib_template.xhtml
@@ -17,36 +17,27 @@ charset=UTF-8" />
 	<link
 		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib.css"
 		rel="stylesheet" type="text/css" />
-
 	<link
 		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib_print.css"
 		rel="stylesheet" type="text/css" media="print" />
-
 	<link
 		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib_menu.css"
 		rel="stylesheet" type="text/css" />
 
-	<script src='http://code.jquery.com/jquery-latest.min.js'></script>
-
-	<script src="//tinymce.cachefly.net/4.0/tinymce.min.js"></script>
-
 	<script
-		src="${facesContext.externalContext.requestContextPath}/resources/javascript/unoSlider.min.js"></script>
-
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/jquery-v1.10.2.min.js" />
 	<script
-		src="${facesContext.externalContext.requestContextPath}/resources/javascript/menu.js"></script>
-
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/tinymce.4.0.6.min.js" />
+	<script
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/unoSlider.min.js" />
+	<script
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/menu.js" />
 	<script type="text/javascript"
-		src="${facesContext.externalContext.requestContextPath}/resources/javascript/tinymce.js">
-	</script>
-
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/tinymce.js" />
 	<script type="text/javascript"
-		src="${facesContext.externalContext.requestContextPath}/resources/javascript/slider.js">
-	</script>
-
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/slider.js" />
 	<script type="text/javascript"
-		src="${facesContext.externalContext.requestContextPath}/resources/javascript/websocket.js">
-	</script>
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/websocket.js" />
 
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
