--- a/src/main/webapp/secured/update_password.xhtml
+++ b/src/main/webapp/secured/update_password.xhtml
@@ -2,7 +2,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://java.sun.com/jsf/passthrough"
+	xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:pf="http://jsf.playerfinder.net/components">
 
 <h:body>
