Changed dependencies (using CDN for tinymce and jquery) and fixed tinymce editor (was lost due to incorrect local JS)

--- a/src/main/webapp/hhcib_template.xhtml
+++ b/src/main/webapp/hhcib_template.xhtml
@@ -24,16 +24,16 @@ charset=UTF-8" />
 		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib_menu.css"
 		rel="stylesheet" type="text/css" />
 
-	<script
-		src="${facesContext.externalContext.requestContextPath}/resources/javascript/jquery-v1.10.2.min.js" />
-	<script
-		src="${facesContext.externalContext.requestContextPath}/resources/javascript/tinymce.4.0.6.min.js" />
+	<script src="//code.jquery.com/jquery-1.10.2.min.js"/>
+	<script src="//tinymce.cachefly.net/4.0/tinymce.min.js"/>
+	
+	<!-- Custom JS -->
 	<script
 		src="${facesContext.externalContext.requestContextPath}/resources/javascript/unoSlider.min.js" />
 	<script
 		src="${facesContext.externalContext.requestContextPath}/resources/javascript/menu.js" />
 	<script type="text/javascript"
-		src="${facesContext.externalContext.requestContextPath}/resources/javascript/tinymce.js" />
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/tinymce-config.js" />
 	<script type="text/javascript"
 		src="${facesContext.externalContext.requestContextPath}/resources/javascript/slider.js" />
 	<script type="text/javascript"
