Added integration tests for updating emails

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,7 +10,7 @@
 
 		<ui:define name="content">
 Välkommen till HurSvårtKanDeVa.se - sajten där goda råd är gratis! Här kan du enkelt hitta råd och beskrivningar 
-på saker du alltid trott är svårta och krångliga. Du är även möjliget att rösta på de beskrivningar eller själv bidra med information.
+på saker du alltid trott är svåra och krångliga. Du är även möjliget att rösta på inlägg eller själv bidra med information.
 		<h:form id="search-form">
 
 				<h:inputText id="search-input" value="#{searchFacade.query}"
