--- a/src/main/webapp/secured/update_email.xhtml
+++ b/src/main/webapp/secured/update_email.xhtml
@@ -17,7 +17,7 @@
 				<h:commandButton value="Uppdatera E-postadress" p:class="button"
 					action="#{updateEmailFacade.updateEmail(user)}" id="update-email" />
 			</h:form>
-			<h:messages errorStyle="color:red;" id="update-password-message" />
+			<h:messages errorStyle="color:red;" id="update-email-message" />
 		</ui:define>
 	</ui:composition>
 </h:body>
