--- a/src/main/webapp/hhcib_template.xhtml
+++ b/src/main/webapp/hhcib_template.xhtml
@@ -9,7 +9,7 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html;
 charset=UTF-8" />
-	<title>HowHardCouldItBe</title>
+	<title>HowHardCanItBe</title>
 
 	<link rel="stylesheet"
 		href="${facesContext.externalContext.requestContextPath}/resources/css/unoSlider.min.css"
